[package]
name = "pachtop-update-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
reqwest = { version = "0.11.13", features = ["json"] }
serde = "1.0"
markdown_to_text = '1.0'
tokio = { version = "1.25.0", features = ["sync"] }

[[bin]]
name = "pachtop-update-server"
path = "src/main.rs"
